@@ -40,7 +40,7 @@ jobs:
 
     - name: Install Clojure
       run: curl -s https://download.clojure.org/install/linux-install-1.10.3.933.sh | sudo bash
-      
+
 
     - name: Tools Versions
       run: |
@@ -69,7 +69,7 @@ jobs:
       run: bb ci-release commit
 
     - name: Make GitHub Actions aware of target version tag
-      run: echo "::set-output name=tag::v$(cat ./target/target-version.txt)"
+      run: echo "::set-output name=tag::v$(clojure -T:build built-version)"
       id: target-version
 
     - name: Create GitHub release (step 4 of 4)
