@@ -2,8 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.lread</groupId>
-  <artifactId>test-doc-blocks</artifactId>
-  <version>1.0.146-alpha</version>
   <name>test-doc-blocks</name>
   <description>Generate Clojure tests from AsciiDoc and CommonMark doc code blocks</description>
   <url>https://github.com/lread/test-doc-blocks</url>
@@ -17,43 +15,10 @@
     <url>https://github.com/lread/test-doc-blocks</url>
     <connection>scm:git:git@github.com:lread/test-doc-blocks.git</connection>
     <developerConnection>scm:git:git@github.com:lread/test-doc-blocks.git</developerConnection>
-    <tag>v1.0.146-alpha</tag>
   </scm>
-  <dependencies>
-    <dependency>
-      <groupId>org.clojure</groupId>
-      <artifactId>clojure</artifactId>
-      <version>1.9.0</version>
-    </dependency>
-    <dependency>
-      <groupId>rewrite-clj</groupId>
-      <artifactId>rewrite-clj</artifactId>
-      <version>1.0.699-alpha</version>
-    </dependency>
-    <dependency>
-      <groupId>clj-kondo</groupId>
-      <artifactId>clj-kondo</artifactId>
-      <version>2021.10.19</version>
-    </dependency>
-    <dependency>
-      <groupId>metosin</groupId>
-      <artifactId>malli</artifactId>
-      <version>0.6.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.clojure</groupId>
-      <artifactId>tools.reader</artifactId>
-      <version>1.3.6</version>
-    </dependency>
-    <dependency>
-      <groupId>babashka</groupId>
-      <artifactId>fs</artifactId>
-      <version>0.1.0</version>
-    </dependency>
-  </dependencies>
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-  </build>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   <repositories>
     <repository>
       <id>clojars</id>
