@@ -3,11 +3,8 @@
 (ns cljdoc-preview
   (:require [babashka.curl :as curl]
             [babashka.fs :as fs]
-            [clojure.data.xml :as xml]
-            [clojure.data.zip.xml :as zxml]
             [clojure.java.browse :as browse]
             [clojure.string :as string]
-            [clojure.zip :as zip]
             [helper.main :as main]
             [helper.shell :as shell]
             [lread.status-line :as status]))
@@ -55,26 +52,26 @@
   (System/getProperty "user.home"))
 
 ;;
-;; maven/pom
+;; project build info
 ;;
-(defn get-from-pom [& tag-path]
-  (let  [xml (-> "./pom.xml"
-                 slurp
-                 (xml/parse-str :namespace-aware false)
-                 zip/xml-zip)]
-    (apply zxml/xml1-> (concat  [xml] tag-path [zxml/text]))))
 
 (defn local-install []
   (status/line :head "building thin jar")
-  (shell/command "clojure -X:jar")
+  (shell/command "clojure -T:build jar :version-suffix cljdoc-preview")
   (status/line :head "installing project to local maven repo")
-  (shell/command "clojure -X:deploy:local"))
+  (shell/command "clojure -T:build install"))
 
 (defn get-project []
-  (str (get-from-pom :project :groupId) "/" (get-from-pom :project :artifactId) ))
+  (-> (shell/command {:out :string}
+                     "clojure -T:build project-lib")
+      :out
+      string/trim))
 
-(defn get-version []
-  (get-from-pom :project :version))
+(defn built-version []
+  (-> (shell/command {:out :string}
+                     "clojure -T:build built-version")
+      :out
+      string/trim))
 
 ;;
 ;; git
@@ -257,13 +254,13 @@ Must be run from project root directory.")
       (do
         (git-warnings)
         (local-install)
-        (cljdoc-ingest cljdoc-container (get-project) (get-version))
+        (cljdoc-ingest cljdoc-container (get-project) (built-version))
         nil)
 
       (get opts "view")
       (do
         (wait-for-server cljdoc-container)
-        (view-in-browser (str "http://localhost:" (:port cljdoc-container) "/d/" (get-project) "/" (get-version)))
+        (view-in-browser (str "http://localhost:" (:port cljdoc-container) "/d/" (get-project) "/" (built-version)))
         nil)
 
       (get opts "status")
